A1/style.css
/*
 * style.css
 *
 * CSC309 Assignment 1
 * 
 * University of Toronto
 * Winter 2026
 *
 */

header {
   width: 100%;
   display: flex;
   justify-content: left;
   background-color: #333333;
   padding-top: 25px;
   padding-bottom: 25px;
}

header a.active{
    color: #b2f5ea;
    font-weight: bold;
    text-decoration: none;
}

header a{
    color: #00b8d4;
    margin-left: 32px;
    text-decoration: none;
    font-size: 19.2px;
    padding-left: 0;
    padding-right: 0;
}

header a:hover{
    color: white;
}

header a:first-child {
    margin-left:16px;
}

a.button, button {
    color:#007EA8;
    background-color: #FFFFFF;
    height: 35px;
    font-family: Inter, sans-serif;
    font-weight: 700;
    font-size: 16px;
    line-height: 100%;
    text-align: center;
    border-color: #007EA8;
    border-width: 2px; 
    border-style: solid;
    border-radius: 4px;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 16px;
    padding-right: 16px;
    box-sizing: border-box;
    white-space: nowrap;
    text-decoration: none;
    display: inline-block;
}

a.button:hover, button:hover {
    background-color: #007EA8;
    color: #FFFFFF;
    border-color: #FFFFFF;
    cursor: pointer;
}


footer {
    display:flex;
    width: 100%;
    height: 3rem;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: #333333;
    margin-top: auto;
}
main {
    padding-top: 128px;
    padding-bottom: 128px;
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
    
}

body {
    font-family: sans-serif;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: #BBBBBB;
}

.content-wrap {
    display: flex;
    flex-direction: column;
    flex: 1;
    min-height: 0;
}

input[type="email"] {
    font-family: 'Times New Roman', serif;
}

p, h1, h2, h3, h4, h5, h6, li, label, a {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
}

a.email {
    font-size: 32px;
    font-weight: bold;
    font-family: 'Times New Roman';
    color: #0000EE;
    text-decoration: none;
}

img.profile-pic {
    border-radius: 100px;
    width: 200px;
    height: 200px;
    margin-bottom: 32px;
}

.main-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

summary {
    list-style: none;
    cursor: pointer;
    color: #333333;
    font-size: 20px;
}

.main-container h1 {
    color: #333333;
    font-size: 48px;
    margin-top: 0;
    margin-bottom: 16px;
}

.main-container p {
    margin-top:0;
    font-size: 24px;
}

details ul {
    list-style-position: inside;
    text-align: center;
    padding-left: 0;
    color: #333333;
    font-size: 20px;
    margin-top: 16px;
    margin-bottom: 0;
    padding: 0;
}

p.guideline {
    margin-top: 24px;
    font-size: 16px;
    color: #333333;
    margin-bottom: 24px;
}

embed {
    margin-top: 0;
    max-width: 720px;
    width: 100%;
    height: 60vh;
}

#email {
    border: solid;
    padding: 0.8rem;
    border-width: 1px;
    border-color: #DDDDDD;
    border-radius: 3px;
    width: 820px;
    box-sizing: border-box;
}

#feedback {
    border: solid;
    padding: 0.8rem;
    border-width: 1px;
    border-color: #DDDDDD;
    border-radius: 3px;
    width: 820px;
    box-sizing: border-box;
}

#attachments {
    border: solid;
    border-width: 1px;
    border-color: #DDDDDD;
    border-radius: 3px;
    padding: 0.8rem;
    width: 820px;
    box-sizing: border-box;
}

#consent {
    transform: scale(1.5);
}

form.main-form {
    margin-top: 24px;
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 16px;
    align-items: start;
    width: 768px;
    box-sizing: border-box;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
}

div.main-form {
    display: contents;
}

form label {
    text-align: right;
    padding-top: 0.8rem;
    padding-left: 0;
    padding-right: 0;
    font-weight: 700;
    font-style: bold;
    font-size: 16px;
    color: #333333;
}

#consent-label {
    text-align: left;
    justify-content: left;
    margin-bottom: 16px;
}

